Css alignment fixed

--- a/src/app/social/common/social-status/social-status.component.css
+++ b/src/app/social/common/social-status/social-status.component.css
@@ -26,7 +26,7 @@
   word-break: break-word;
   float: left;
   overflow-y: auto;
-  height: 100px;
+  height: 30px;
   padding-left: 0;
 }
 .status-media {
