--- a/src/app/social/common/update-status/update-status.component.css
+++ b/src/app/social/common/update-status/update-status.component.css
@@ -558,3 +558,13 @@ body {
   background-color: #ddd !important;
   color:#000 !important;
 }
+
+.status-media img {
+  max-width: 100%;
+  max-height: 100%;
+  max-height: 100%;
+  height: 60px;
+  width: 100%;
+  margin: 0 auto;
+  float: left;
+}
